--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.0.0"
+    "node": "12.18.x",
+    "npm": "6.14.x"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -36,3 +36,4 @@
     ]
   }
 }
+
